--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
-image: ubuntu:latest
+#This code is the first gitlab-ci build to run openssh on an image using ubuntu as the image instead of using the image of kubernetes that is the executor
+ image: ubuntu:latest
 
 stages:  # List of stages for jobs, and their order of execution
   - build
