--- a/.gitlab-ci1.yml
+++ b/.gitlab-ci1.yml
@@ -30,6 +30,7 @@ build-job:       # This job runs in the build stage, which runs first.
     - echo "Copy addons file in Odoo pod"
     - POD=$(kubectl --namespace=odoo get pod -l app=odoo-app -o jsonpath="{.items[0].metadata.name}")
     - kubectl cp odoo-modules/addons odoo/$POD:/mnt/extra-addons
+    # Replace COMMAND mv because the script down will not work
     - kubectl exec $POD -- COMMAND "/bin/sh -c mv /mnt/extra-addons/addons/* /mnt/extra-addons/ && rmdir /mnt/extra-addons/addons"
     #- kubectl cp odoo-modules/addons/my-modules odoo/$POD:/mnt/extra-addons
     - echo "Restart pod"
